[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "github-hacker"
version = "0.2.0"
description = "CLI tool to manage multiple GitHub accounts for batch operations"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "SSBun", email = "ssbun.github@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.9.0",
    "pygithub>=2.0.0",
    "rich>=13.0.0",
]

[project.scripts]
github-hacker = "githubhacker.cli:app"

[project.urls]
Homepage = "https://github.com/SSBun/GithubHacker"
